<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jaka_rviz_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="h765907397@gmail.com">pinnmax</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>jaka_msgs</depend>
  <exec_depend>websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
