<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jaka_teleop</name>
  <version>0.0.0</version>
  <description>Python and C++ nodes for VR-based JAKA teleoperation</description>

  <maintainer email="dija@todo.todo">dija</maintainer>
  <license>Apache License 2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- 编译时依赖 -->
  <!-- <build_depend>rclcpp</build_depend> -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jaka_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv_dev</build_depend>
  <!-- <depend>roscpp</depend> -->
  <depend>rospy</depend>
  <!-- 安装时依赖（编译后的依赖） -->
  <!-- <build_export_depend>rclcpp</build_export_depend> -->
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>jaka_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>opencv_dev</build_export_depend>

  <!-- 运行时依赖 -->
  <!-- <exec_depend>rclcpp</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>jaka_msgs</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>opencv_dev</exec_depend>

  <export>
    <!-- <build_type>ament_cmake</build_type>  -->
    <build_type>ament_python</build_type> 
  </export>
</package>
